Change asset delete picker message in code editor too, Added focus class for active button in confirm picker

--- a/editor/sass/partials/_ui-common.scss
+++ b/editor/sass/partials/_ui-common.scss
@@ -36,7 +36,7 @@
             background: darken($text-active, 7%);
             color: $text-primary;
 
-            &:hover {
+            &:hover,&:focus {
                 background: darken($text-active, 12%);
             }
         }
