Change the color of the textarea in the version control picker to always be dark even when not focused

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8559,6 +8559,7 @@ strong {
                                     .ui-textarea-field {
                                         width: auto;
                                         height: 100px;
+                                        background: $bcg-darkest;
                                     }
                                 }
                             }
