--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -9358,6 +9358,13 @@ strong {
                                                         line-height: initial;
                                                     }
 
+                                                    .field-curve {
+                                                        border: 0;
+                                                        background-color: $bcg-darkest !important;
+                                                        pointer-events: none;
+                                                        height: 25px;
+                                                    }
+
                                                     &.field-array-container {
                                                         > .content {
                                                             height: 100%;
