Made delete array element buttons a bit darker

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8373,7 +8373,7 @@ strong {
                     margin: 0;
                     margin-left: 3px;
 
-                    color: $text-dark;
+                    color: $text-darkest;
                     &:hover {
                         color: #fb222f;
                     }
