Adding merging of text files

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -76,6 +76,15 @@ strong {
         height: 100%;
         overflow: hidden;
     }
+
+    &.file-only-mode {
+        #ui-top, #ui-left, #ui-bottom, #ui-tabs {
+            display: none;
+        }
+        #ui-center, #ui-code {
+            height: 100%;
+        }
+    }
 }
 
 #ui-top {
