--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -9596,8 +9596,26 @@ strong {
                                         font-size: 16px;
                                     }
 
-                                    &.mark-resolved:before {
-                                        content: '\E133';
+                                    &.mark-resolved {
+                                        background: darken($text-active, 7%);
+                                        color: $text-primary;
+                                        &:before {
+                                            content: '\E133';
+                                        }
+
+                                        &:hover,&:focus {
+                                            background: darken($text-active, 12%);
+                                        }
+                                    }
+
+                                    &.use-all {
+                                        &:after {
+                                            @extend .font-icon;
+                                            margin-left: 5px;
+                                            vertical-align: middle;
+                                            font-size: 16px;
+                                            content: '\E159';
+                                        }
                                     }
 
                                     &.go-back:before {
@@ -9661,6 +9679,19 @@ strong {
                     }
                 }
             }
+        }
+    }
+}
+
+.ui-menu.textmerge-dropdown {
+    .ui-menu-item {
+        max-width: 300px;
+        background: $bcg-dark;
+        > .title {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 12px;
+            color: $text-primary;
         }
     }
 }
