--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -1245,10 +1245,10 @@ a.link-docs {
 
     &.conflict-overlay-content {
         > .ui-label {
+            position: absolute;
+            z-index: 2;
             font-size: 12px;
             color: $text-primary;
-            float: right;
-            margin-right: 20px;
             &:before {
                 font-size: 12px;
                 content: '\E399';
